--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-		  cache-dependency-path: ../package.json
+		  cache-dependency-path: /../package.json
           node-version: "lts/*"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
 
