--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,6 +77,13 @@ jobs:
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
 
+	  - name: Print package manager
+		run: echo "Package manager: ${{ steps.detect-package-manager.outputs.manager }}"
+
+	  - name: Print install command
+		run: echo "Install command: ${{ steps.detect-package-manager.outputs.command }}"
+
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
