--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,9 +53,9 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-		  cache-dependency-path: '${{github.workspace}}/package.json'
           node-version: "lts/*"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
+		  cache-dependency-path: ${{ github.workspace }}/package.json
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
