--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,19 +72,19 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
 
       - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+        #run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+        run: npm ci
 
-      - name: Print package manager
-        run: echo "Package manager: ${{ steps.detect-package-manager.outputs.manager }}"
 
       - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build
+        #run: ${{ steps.detect-package-manager.outputs.runner }} next build
+        run: npx --no-install next build
 
-	  - name: Print package manager
-		run: echo "Package manager: ${{ steps.detect-package-manager.outputs.manager }}"
+	  #- name: Print package manager
+	#	run: echo "Package manager: ${{ steps.detect-package-manager.outputs.manager }}"
 
-	  - name: Print install command
-		run: echo "Install command: ${{ steps.detect-package-manager.outputs.command }}"
+	 # - name: Print install command
+	#	run: echo "Install command: ${{ steps.detect-package-manager.outputs.command }}"
 
 
       - name: Upload artifact
