--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,16 +60,19 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
+      - name: download pnpm
+        run: npm install -g pnpm
+
       - name: Restore cache
         uses: actions/cache@v4
         with:
           path: |
             .next/cache
           # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml', '**/yarn.lock') }}-
 
       - name: Install dependencies
         #run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
@@ -77,7 +80,8 @@ jobs:
 
       - name: Build and generate static site in /out
         run: pnpm run build
-        #- name: Build with Next.js
+        #- name: Build with Next.js i have already have a template so don't
+		#need to have this build with boilerplate
         #run: ${{ steps.detect-package-manager.outputs.runner }} next build
         # run: npx --no-install next build
 
